--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libxau (1:1.0.6-4pexip1) pexip; urgency=low
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Tue, 24 Dec 2013 22:24:27 +0000
+
 libxau (1:1.0.6-4) unstable; urgency=low
 
   * Mark libxau-dev Multi-Arch: same, after confirming the contents are
