--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libxau (1:1.0.9-1pexip5) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:55:28 +0000
+
 libxau (1:1.0.9-1pexip4) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
