--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libxau (1:1.0.9-1+pexip24u6) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:08:28 +0000
+
 libxau (1:1.0.9-1pexip5) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
